tests/baselines/reference/tsxElementResolution6.errors.txt
file.tsx(8,1): error TS2339: Property 'div' does not exist on type 'JSX.IntrinsicElements'.


==== file.tsx (1 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements { }
    }
    
    var div: any;
    // Still an error
    <div n='x' />;
    ~~~~~~~~~~~~~
!!! error TS2339: Property 'div' does not exist on type 'JSX.IntrinsicElements'.
    